--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
 url: raminasotoudeh.github.io
+baseurl:
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
